--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.app-inner {
+  width: 100%;
+  max-width: 940px;
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.col {
+  width: 50%;
+}
+
+.textarea-wrapper {
+  width: 100%;
+  min-height: 250px;
+  padding: 15px;
+  box-sizing: border-box;
+  border: 1px solid rgba(0, 0, 0, .4);
+  position: relative;
+}
+
+.col:first-child .textarea-wrapper {
+  border-right: 0;
+}
+
+.textarea-wrapper textarea {
+  position: absolute;
+  left: 1px;
+  top: 1px;
+  width: calc(100% - 2px);
+  height: calc(100% - 2px);
+  resize: none;
+  font-size: 24px;
+  font-weight: 500;
+  color: rgba(0, 0, 0, .4);
+  border: none;
+  padding: 15px;
+  box-sizing: border-box;
+}
+
+.textarea-wrapper.text-added textarea,
+.textarea-wrapper textarea:focus,
+.textarea-wrapper textarea:active {
+  color: rgba(0, 0, 0, 1);
+  outline: none;
+  box-shadow: none;
+}
+
+.textarea-wrapper span {
+  color: rgba(0, 0, 0, .4);
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.textarea-wrapper.text-added span {
+  color: rgba(0, 0, 0, 1);
 }
